<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">SPOTIFY STREAMER</string>
    <string name="button2">SCORES APP</string>
    <string name="button3">LIBRARY APP</string>
    <string name="button4">BUILD IT BIGGER</string>
    <string name="button5">BACON READER</string>
    <string name="button6">CAPSTONE: MY OWN APP</string>
    <string name="msg1">This button will launch my spotify streamer app!</string>
    <string name="msg2">This button will launch my scores app!</string>
    <string name="msg3">This button will launch my library app</string>
    <string name="msg4">This button will launch my build it bigger app!</string>
    <string name="msg5">This button will launch my bacon reader app!</string>
    <string name="msg6">This button will launch my capstone app!</string>



</resources>
