<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1"
    android:clickable="false"
    android:orientation="vertical">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button1"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="#F08C35"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#D83055"
        android:onClick="sendMessage"/>

</RelativeLayout>
